--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "clsx": "^1.1.1",
     "chokidar": "^3.5.2",
+    "clsx": "^1.1.1",
     "date-fns": "^2.22.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -23,8 +23,7 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "uuid": "^3.4.0",
-    "web-vitals": "^1.0.1"
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "3.2.5"
   }
 }
